Localize required messages

--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -7,6 +7,7 @@
     <!-- See https://gist.github.com/ebaranov/41bf38fdb1a2cb19a781 -->
     <script type="text/javascript" language="javascript" src="/static/js/country_state_list.js"></script>
     <script type="text/javascript" language="javascript" src="/static/js/us_states.js"></script>
+    <script type="text/javascript" language="javascript" src="/static/vendor/jquery-validation/messages_{{ _(EN_US_KEY) }}.js"></script>
     <script>
         $(document).ready(function(){
             let form_name = 'acct_form';
