--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -49,6 +49,7 @@
         <input id="email_query" name="email_query" class="form-control mr-sm-2" type="search" placeholder="User Email" aria-label="Search"/>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">{{ _('Find Account') }}</button>
       </form>
+      <a class="btn btn-outline-success" href="/admin/barcode_search">{{ _('Barcode Search') }}</a>
     </nav>
     {% endif %}
     {% if not admin_mode %}
