--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -152,6 +152,13 @@
                 <label for="email" name="email_label">{{ _('Email') }}*</label>
                 <input id="email" name="email" class="form-control" type="hidden" value="{{account.email |e}}"/>
                 <input id="view_email" name="view_email" class="form-control" type="email" value="{{account.email |e}}" disabled="disabled" readonly/>
+                {% if not CREATE_ACCT %}
+                    <small class="form-text text-muted">{{ _('Prefer to use a different email account?  You can change it ') }}
+                        <a href="{{authrocket_url}}/profile?redirect_uri={{endpoint}}/authrocket_callback">
+                            {{ _('here') }}
+                        </a>
+                    </small>
+                {% endif %}
             </div>
             <div class="form-group">
                 <label for="first_name" name="first_name_label">{{ _('First Name') }}*</label>
