--- a/microsetta_interface/templates/admin_barcode_search.jinja2
+++ b/microsetta_interface/templates/admin_barcode_search.jinja2
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/static/vendor/css/query-builder.default.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/vendor/css/jquery.dataTables.css" />
 
+    <script src="/static/vendor/moment/moment.min.js"></script>
     <script type="text/javascript" charset="utf8" src="/static/vendor/js/jquery.dataTables.js"></script>
     <script src="/static/vendor/DataTables/Buttons-1.6.2/js/dataTables.buttons.min.js"></script>
     <script src="/static/vendor/DataTables/Buttons-1.6.2/js/buttons.html5.min.js"></script>
