replaced doT and jquery-extendext with the query-builder.standalone.min.js script from the query builder website.

--- a/microsetta_interface/templates/admin_barcode_search.jinja2
+++ b/microsetta_interface/templates/admin_barcode_search.jinja2
@@ -10,10 +10,7 @@
     <script src="/static/vendor/DataTables/Buttons-1.6.2/js/dataTables.buttons.min.js"></script>
     <script src="/static/vendor/DataTables/Buttons-1.6.2/js/buttons.html5.min.js"></script>
 
-
-    <script src="/static/vendor/jquery-extendext/jquery-extendext.js"></script>
-    <script type="text/javascript" src="/static/vendor/doT/doT.js"></script>
-    <script type="text/javascript" src="/static/vendor/js/query-builder.min.js"></script>
+    <script type="text/javascript" src="/static/vendor/js/query-builder.standalone.min.js"></script>
 
     <script>
         function createBarcodeTable(queryURL, queryData)
