A few missed items

--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -100,7 +100,7 @@
             <div class="card info-col border-0 mb-3">
                 <div class="card bg-light mb-3 info-card">
                     <div class="card-body">
-                        <p>{{ _('Our lab needs to know what type of sample(s) you are submitting (a.k.a. the “source”). Add a new source and assign samples to it so we can perform the correct analysis in our laboratory.') }}</p>
+                        <p>{{ _('Our lab needs to know what type of sample(s) you are submitting (a.k.a. the "source"). Add a new source and assign samples to it so we can perform the correct analysis in our laboratory.') }}</p>
                     </div>
                 </div>
                 <div class="card bg-light info-card">
