--- a/microsetta_interface/templates/embedded_pdf.jinja2
+++ b/microsetta_interface/templates/embedded_pdf.jinja2
@@ -1,5 +1,6 @@
 {% extends "sitebase.jinja2" %}
-{% set page_title = page_title %}
+{% set page_title = _('Embedded PDF') %}
+{% set show_breadcrumbs = True %}
 
 {% block head %}
 
