localize error messages with vueformgenerator

--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -53,6 +53,11 @@
         }
     </style>
     <script>
+        // Overwrite and localize the messages used, based on the example from:
+        // https://github.com/vue-generators/vue-form-generator/issues/15#issuecomment-231033466
+        VueFormGenerator.validators.resources.invalidInteger = "{{ _('invalid_integer_error') }}";
+        VueFormGenerator.validators.resources.invalidNumber = "{{ _('invalid_number_error') }}";
+
         var result_txt = "";
         var error_txt = "";
         var form_submitted = 0;
