--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -55,8 +55,8 @@
     <script>
         // Overwrite and localize the messages used, based on the example from:
         // https://github.com/vue-generators/vue-form-generator/issues/15#issuecomment-231033466
-        VueFormGenerator.validators.resources.invalidInteger = "{{ _('invalid_integer_error') }}";
-        VueFormGenerator.validators.resources.invalidNumber = "{{ _('invalid_number_error') }}";
+        VueFormGenerator.validators.resources.invalidInteger = "{{ _('The value is not an integer') }}";
+        VueFormGenerator.validators.resources.invalidNumber = "{{ _('Invalid number') }}";
 
         var result_txt = "";
         var error_txt = "";
