--- a/microsetta_interface/templates/update_address_confirm.jinja2
+++ b/microsetta_interface/templates/update_address_confirm.jinja2
@@ -24,7 +24,9 @@
     <div class="card"  style="max-width: 800px; text-align: left;">
         <h5 class="card-header" style="text-align: center">{{ _('Address Updated') }}</h5>
         <div class="card-body">
-            {{ _('Thank you for updating your address! Your information has been saved, and we will contact you via email soon.') }}
+            <center>
+                {{ _('Thank you for updating your address! Your information has been saved and you will receive an email notification once your kit ships.') }}
+            </center>
         </div>
     </div>
 </center>
