--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -297,7 +297,7 @@
                     </a>
                 </div>
                 <div class="col-sm">
-                    {{ "placeholder" }}
+                    {{ detail.description|e }}
                 </div>
             </div>
         </div>
