--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -421,8 +421,11 @@
                     <p>
                         {{ _('Otherwise, the account and any sources will be deleted') }}
                     </p>
+                    <p>
+                        {{ _('IMPORTANT: you must manually delete the email from Authrocket to complete the process') }}
+                    </p>
                     <h3>
-                        {{ _('THIS CANNOT BE UNDONE') }}
+                        {{ _('ACCOUNT DELETION CANNOT BE UNDONE') }}
                     </h3>
                     <input type="hidden" id="account_id" name="account_id" value="{{ account.account_id }}"/>
                     <button type=submit" class="btn btn-danger">{{ _('Delete Account') }}</button>
