--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -422,7 +422,7 @@
                         {{ _('Otherwise, the account and any sources will be deleted') }}
                     </p>
                     <p>
-                        {{ _('IMPORTANT: you must manually delete the email from Authrocket to complete the process') }}
+                        {{ _('IMPORTANT: you must manually delete the email from Authrocket and other external services like MyEmma to complete the process') }}
                     </p>
                     <h3>
                         {{ _('ACCOUNT DELETION CANNOT BE UNDONE') }}
